ヘッダー部分のコーディングまで

--- a/style.css
+++ b/style.css
@@ -1,7 +1,53 @@
 * {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
 }
+
+.edie {
+  margin: 0 auto;
+  padding: 42px 56px 0 52px;
+}
+
+.edie__header {
+  display: flex;
+  align-items: center;
+  gap: 463px;
+}
+
+.edie__logo {
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.edie__nav__buttons {
+  display: flex;
+}
+
+.edie__nav__button {
+  font-size: 24px;
+}
+
+.edie__nav__button:not(:last-child) {
+  margin-right: 60px;
+}
+
+.edie__unhappy {
+  margin: 96px 0 42px 225px;
+}
+
+.edie__unhappy__message {
+  color: #2d9cdb;
+}
+
+.edie__unhappy__tohappy {
+  font-size: 48px;
+  font-weight: 500;
+}
+
+.edie__hero__image {
+  border-radius: 18px;
+}
+
 footer {
   margin-top: 93px;
   text-align: center;
