--- a/style.css
+++ b/style.css
@@ -174,6 +174,20 @@
   color: #ffffff;
 }
 
+.edie__team {
+  display: flex;
+  gap: 180px;
+  margin-top: 220px;
+}
+
+.edie__team__red {
+  color: #eb5757;
+}
+
+.edie__team__message {
+  color: #4f4f4f;
+}
+
 .edie__comment {
   margin-top: 196px;
   width: 937px;
@@ -282,6 +296,9 @@ footer {
   }
   .edie__services__cards {
     grid-template-columns: repeat(1, 350px);
+  }
+  .edie__team {
+    flex-direction: column;
   }
   .edie__comment {
     margin: 100px 0;
